# gdrive-sync

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  settings.yaml  sync.py
gdrivesync/: sync.py
