[project]
name = "gdrivesync"
version = "0.1.0"
description = ""
authors = [{ name = "Victor Varvaryuk", email = "victor.varvariuc@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "PyDrive2",
    "tenacity",
    "click",
    "pydantic",
    "pyzipper",
]

[dependency-groups]
dev = [
    "pdbpp",
    "ruff",
    "pre-commit",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
fix = true
show-fixes = true
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
# https://docs.astral.sh/ruff/rules/
ignore = [
    "D", # Missing docstring
    "TD", # flake8-todos
    "ANN", # Missing annotations
    "FIX", # flake8-fixme
    "S101", # Use of assert detected
    "EM", # flake8-errmsg
    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY002", # Create your own exception
    "RET503", # Missing explicit `return` at the end of function
    "FBT001", # Boolean-typed positional argument in function definition
]

[tool.ruff.lint.isort]
order-by-type = false
lines-after-imports = 2

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
  "copy",
  "datetime",
  "functools",
  "itertools",
  "random",
  "sys",
  "unittest.mock",
  "uuid",
  # third-party
  "pydantic",
]

[project.scripts]
sync = "gdrivesync.sync:main"